@@ -1,0 +1,1 @@
+/usr/local/share/automake-1.16/ar-lib
