@@ -1,3 +1,9 @@
+2020-06-05         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* configure.ac: Add call to AM_PROG_AR for use in
+	cross compiles.  Thanks to Sergei Trofimovich <slyfox@gentoo.org>
+	for the patch.
+
 2020-05-15         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* config.guess, config.sub: Updated from GNULIB.
